--- a/data-challenges/a-b-testing/confidence-intervals-and-a-b-testing.ipynb
+++ b/data-challenges/a-b-testing/confidence-intervals-and-a-b-testing.ipynb
@@ -7,16 +7,26 @@
     "# Confidence intervals and A/B testing\n",
     "\n",
     "Ryan Reece     \n",
-    "2018-02-26"
+    "2018-02-26\n",
+    "\n",
+    "Contents:\n",
+    "\n",
+    "1.  [Introduction](#introduction)\n",
+    "1.  [Generate some toy data](#generate_some_toy_data)\n",
+    "1.  [$z$ statistic](#z_statistic)\n",
+    "1.  [Normal approximation to the binomial](#normal_approximation_to_the_binomial)\n",
+    "1.  [$t$ statistic](#t_statistic)\n",
+    "1.  [$\\chi^2$ statistic](#chi2_statistic)\n",
+    "1.  [See also](#see_also)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction\n",
+    "<a id=\"introduction\"></a>\n",
     "\n",
-    "TODO."
+    "## Introduction"
    ]
   },
   {
@@ -98,6 +108,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"generate_some_toy_data\"></a>\n",
+    "\n",
     "## Generate some toy data"
    ]
   },
@@ -390,14 +402,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"z_statistic\"></a>\n",
+    "\n",
     "## $z$ statistic\n",
     "\n",
-    "TODO:\n",
+    "A normalilzed random variable, $Z$, follows the normal (Gaussian) distribution.\n",
+    "A $Z$ statistic can be calculated from any random variable $X$, where the population variance of $X$ is known to be $\\sigma$, by\n",
     "\n",
-    "-   normally distributed\n",
-    "-   used when variance is known\n",
+    "$Z = \\frac{{\\bar{X}}-\\mu}{{\\sigma \\: /\\sqrt{n}}}$\n",
     "\n",
-    "$Z = \\frac{{\\bar{X}}-\\mu}{{\\sigma \\: /\\sqrt{n}}}$\n"
+    "For example, let's normalize the $x$ data from class 0:"
    ]
   },
   {
@@ -452,6 +466,13 @@
    "metadata": {},
    "source": [
     "**Following the *Data Science From Scratch*, p. 82-88**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's setup the normal cumulative distribution from scratch, as we will use this later in many ways when calculating $p$-values and limits."
    ]
   },
   {
@@ -586,6 +607,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"normal_approximation_to_the_binomial\"></a>\n",
+    "\n",
     "## Normal approximation to the binomial\n",
     "\n",
     "Note that the true binomial distribution is discrete, but as $n$ increases,\n",
@@ -825,6 +848,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"t_statistic\"></a>\n",
+    "\n",
     "## $t$ statistic\n",
     "\n",
     "The [$t$-test](https://en.wikipedia.org/wiki/Student%27s_t-test) is a statistical hypothesis test can be used to determine if sets of data are significantly different from each other.  A $t$-test is most commonly used when the test statistic, $t$, would follow a normal distribution if the value of a scaling term were known. When the scaling term is unknown and is replaced by an estimate based on the data, the test statistic (under certain conditions) follows a [Student's $t$ distribution](https://en.wikipedia.org/wiki/Student%27s_t-distribution).\n",
@@ -882,6 +907,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's normalize the $x$ data from classes 1 and 2, and use a Welch $t$-test to test if the means of the classes are signficantly different.\n",
+    "\n",
+    "Class 0 and 1 have significantly different means for $x$:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -902,6 +936,13 @@
     "p = result.pvalue\n",
     "print 't = %.5g' % (t)\n",
     "print 'p = %.5g' % (p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Class 1 and 2 do *not* have significantly different means for $x$:"
    ]
   },
   {
@@ -967,13 +1008,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"chi2_statistic\"></a>\n",
+    "\n",
     "## $\\chi^2$ statistic\n",
     "\n",
-    "Often we are interested in measuring some rate of interest, $\\rho \\in [0, 1]$, that can be thought of as a success rate or conversion rate: the fraction of events that did something of interest.  In the framework of A/B-testing, not only do we want to measure a parameter of interest, but we want to see if it is *significantly* different between two samples: $A$ and $B$. Often sample $A$ is thought of as the original or control version, and in sample $B$, we have made some kind of systematic change, and we want to test if that *significantly* changes $\\rho$.\n",
+    "Unlike $z$ and $t$ tests, \\chi^2$ uses categorical/binned data.\n",
     "\n",
-    "TODO:\n",
-    "\n",
-    "-   $\\chi^2$ uses categorical/binned data"
+    "Often we are interested in measuring some rate of interest, $\\rho \\in [0, 1]$, that can be thought of as a success rate or conversion rate: the fraction of events that did something of interest.  In the framework of A/B-testing, not only do we want to measure a parameter of interest, but we want to see if it is *significantly* different between two samples: $A$ and $B$. Often sample $A$ is thought of as the original or control version, and in sample $B$, we have made some kind of systematic change, and we want to test if that *significantly* changes $\\rho$."
    ]
   },
   {
@@ -1404,6 +1445,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "## See also\n",
     "\n",
     "References:\n",
