--- a/data-challenges/a-b-testing/confidence-intervals-and-a-b-testing.ipynb
+++ b/data-challenges/a-b-testing/confidence-intervals-and-a-b-testing.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When looking testing for discrepancy/consistency, we want to note when a $p$-value is especially small.  The absolute threshold for notability is somewhat arbitrary and dependent on domain and our tolerances for false-positives and negatives.  Typically, one will note when a statistic is outside of \n",
+    "When testing for discrepancy/consistency, we want to note when a $p$-value is especially small.  The absolute threshold for notability is somewhat arbitrary and dependent on domain and our tolerances for false-positives and negatives.  Typically, one will note when a statistic is outside of \n",
     "\n",
     "| Confidence Level |  z*-value |\n",
     "|-----------------:|----------:|\n",
