--- a/data-challenges/a-b-testing/confidence-intervals-and-a-b-testing.ipynb
+++ b/data-challenges/a-b-testing/confidence-intervals-and-a-b-testing.ipynb
@@ -1054,7 +1054,7 @@
     "\n",
     "$\\chi^2 = \\sum_{i} \\frac{(O_i - E_i)^2}{E_i}$\n",
     "\n",
-    "Assuming the conversion rate is the same among samples $A$ and $B$,\n",
+    "Assuming the conversion rate is the same among samples $A$ and $B$:\n",
     "\n",
     "$\\chi^2 = \\frac{(N_{A1} - N_{A}*(1-\\rho))^2}{N_{A}*(1-\\rho)} + \\frac{(N_{A2} - N_{A}*\\rho)^2}{N_{A}*\\rho} + \\frac{(N_{B1} - N_{B}*(1-\\rho))^2}{N_{B}*(1-\\rho)} + \\frac{(N_{B2} - N_{B}*\\rho)^2}{N_{B}*\\rho}$"
    ]
